@@ -1,5 +1,5 @@
 /*
- Copyright (C) 2005-2008 Quantum ESPRESSO group
+ Copyright (C) 2011-2013 Quantum ESPRESSO group
  This file is distributed under the terms of the
  GNU General Public License. See the file `License'
  in the root directory of the present distribution,
